--- a/GAME/fonts.css
+++ b/GAME/fonts.css
@@ -5,5 +5,5 @@
 }
 
 canvas {
-    cursor: url('assets/interface/galleta.png') 8 8, default;
+    cursor: url('assets/interface/cursor.png') 0 0, default;
   }
