cursor todo el rato

--- a/ApiRest/rest_ejem4/src/main/resources/static/GAME/fonts.css
+++ b/ApiRest/rest_ejem4/src/main/resources/static/GAME/fonts.css
@@ -4,6 +4,6 @@
        url("./assets/interface/interfaceFont.ttf") 
 }
 
-canvas {
+body {
     cursor: url('./assets/interface/cursor.png') 0 0, default;
   }
